# CvAllIn

./: .gitignore  CMakeLists.txt  README  build.bat
data/Image/Camera/: VID5.xml.bak
dep/opencv331/include/opencv2/: cvconfig.h
dep/opencv331/lib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules.cmake  opencv_aruco331d.lib  opencv_bgsegm331d.lib  opencv_bioinspired331d.lib  opencv_calib3d331d.lib  opencv_ccalib331d.lib  opencv_core331d.lib  opencv_datasets331d.lib  opencv_dnn331d.lib  opencv_dpm331d.lib  opencv_face331d.lib  opencv_features2d331d.lib  opencv_flann331d.lib  opencv_fuzzy331d.lib  opencv_highgui331d.lib  opencv_img_hash331d.lib  opencv_imgcodecs331d.lib  opencv_imgproc331d.lib  opencv_line_descriptor331d.lib  opencv_ml331d.lib  opencv_objdetect331d.lib  opencv_optflow331d.lib  opencv_phase_unwrapping331d.lib  opencv_photo331d.lib  opencv_plot331d.lib  opencv_reg331d.lib  opencv_rgbd331d.lib  opencv_saliency331d.lib  opencv_shape331d.lib  opencv_stereo331d.lib  opencv_stitching331d.lib  opencv_structured_light331d.lib  opencv_superres331d.lib  opencv_surface_matching331d.lib  opencv_text331d.lib  opencv_tracking331d.lib  opencv_video331d.lib  opencv_videoio331d.lib  (+5 more)
src/cpp/: CMakeLists.txt
src/cpp/Tracking/: CMakeLists.txt  OpticFlowAPI.cpp  demo.cpp  stdafx.h
src/cpp/common/: CMakeLists.txt  header.h
src/cpp/cpp_tutorial/: CMakeLists.txt  cpp_template.cpp  print4matlab.cpp
src/cpp/encrypt/: CMakeLists.txt  encrypt.cpp  encrypt.h  encrypt_test.cpp
src/cpp/nonlinear_optimization/: CMakeLists.txt  GaussNewtonDemo.cpp
src/cpp/opencv_quickdemo/: CMakeLists.txt  quickdemo.cpp
